--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@prisma/client": "^4.2.1",
+    "axios": "^0.27.2",
     "framer-motion": "^7.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
